kubernetes/k3s/k3s_basics/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        imagePullPolicy: Always
        image: <username>/flask-app:0.1.1
        ports:
        - containerPort: 5000
