kubernetes/k3s/k3s_basics/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: flask-app
  labels:
    app: flask-app
spec:
  containers:
    - name: flask-app
      image: <username>/flask-app:0.1.1
      imagePullPolicy: Always
      ports:
        - name: http
          containerPort: 5000
          protocol: TCP
